--- a/index.css
+++ b/index.css
@@ -1,15 +1,102 @@
-.nav{
-    position: fixed;
-    height: 15%;
+*{
+    margin: 0px;
+    padding: 0px;
+}
+
+.div1{
+    height: 100%;
     width: 100%;
+    background-color:white;
+    position: relative; 
     top: 0px;
     left: 0px;
-    background-color: black;
-   
 }
-.title{
-    font: 'Just Another Hand', Helvetica, sans-serif;
-    color: #969595;
-    text-shadow: 0px 3px 0px #5e5e5e, 0px 5px 0px #4d4d4d, 0px 7px 0px #3c3c3c,
-    0px 9px 0px #2b2b2b, 3px 8px 15px rgba(0,0,0,0.1), 3px 8px 5px rgba(0,0,0,0.3);
+.div1a{
+    height: 100%;
+    width: 25%;
+    background-color: black;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    opacity:0.6 ;
+}
+.heading{
+    color:white;
+    text-align: center;
+    font-style: italic;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 
+    'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 30px;
+    position: relative;
+    margin-top: 20px;
+}
+.img{
+    width: 100%;
+    height: 100%;
+}
+.para{
+    margin-top: 35%;
+    margin-left: 25%;
+    margin-right: 41%;
+    color: white;
+    padding: 2px 2px 5px 2px;
+    border-bottom: 1px solid white;
+    position: relative;
+}
+.p1{
+    margin-left: 25%;
+    margin-top: 10px;
+    color: white;
+    font-size: 35px;
+    font-weight: 100;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
+     'Lucida Sans', Arial, sans-serif;
+}
+.p2{
+    margin-left: 25%;
+    color: white;
+    position: relative;
+    margin-top: 10px;
+}
+.button1{
+    background-color: rgb(252, 25, 0);
+    color: white;
+    margin-left: 25%;
+    margin-top: 50px;
+    width: 100px;
+    height: 30px;
+    position: relative;
+}
+.d2-heading{
+     color:black;
+    text-align: center;
+    font-style: italic;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 
+    'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 40px;
+    position: relative;
+    margin-top: 20px;
+}
+.div2{
+    height: 100%;
+    display: block;
+}
+.img1{
+    display: block;
+    width: 400px;
+    height: 300px;
+    float: left; 
+    margin: 90px 80px 40px 60px;
+    border-radius: 45px;
+    transition: width 2s, height 2s, transform 2s;
+}
+.img1:hover {
+  width: 500px;
+  height: 400px;
+  transform: rotate(360deg);
+}
+.d2-para{
+    font-style: "Comic Sans MS", cursive, sans-serif;
+    margin: 85px 0px 55px 75px;
+    padding-bottom: 5px 5px 5px 5px;
 }
